--- a/index.html
+++ b/index.html
@@ -264,8 +264,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/professor.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/professor.svg" alt="design icon" width="40">
               </div>
               
 
